--- a/Customer-Dashboard/CSS/orderstatus.css
+++ b/Customer-Dashboard/CSS/orderstatus.css
@@ -26,6 +26,95 @@ body{
 }
 
 .content{
+    position: relative;
+   
+    background-color: white;
+   
+    
+}
+
+.content .top{
+    position: fixed;
+    top: 0;
+    left: 250px;
+    display: flex;
+    width: calc(100% - 250px);
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 14px;
+    background-color: rgb(240, 238, 245);
+    
+    transition: var(--tran-05);
+    box-shadow: 0px 0px 36px 15px rgba(184, 179, 179, 0.28);
+    z-index: 10;
+}
+
+.content .top .search-box{
+    position: relative;
+    height: 45px;
+    max-width: 600px;
+    width: 100%;
+    margin: 0 30px;
+}
+
+.top .search-box input{
+    position: absolute;
+    border: 1px solid var(--border-color);
+    background-color: var(--panel-color);
+    padding: 0 25px 0 50px;
+    border-radius: 5px;
+    height: 100%;
+    width: 100%;
+    color: var(--text-color);
+    font-size: 15px;
+    font-weight: 400;
+    outline: none;
+}
+.top .search-box i{
+    position: absolute;
+    left: 15px;
+    font-size: 22px;
+    z-index: 10;
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--black-light-color);
+}
+i{
+    color:#008AFF;
+}
+.top img{
+    width: 40px;
+    border-radius: 50%;
+}
+
+.avatar1{
+
+    display: flex;
+    
+    width: 50px;
+    justify-content: space-around;
+    
+
+}
+
+
+.flex {
+    display: flex;
+    width: 50px;
+    justify-content: space-around;
+    
+}
+
+.img{
+    position: relative;
+    margin-left: 5px; 
+}
+.top .img {
+    width: 40px;
+    border-radius: 50%;
+}
+
+.content{
     min-height: 100vh;
     width :100%
 }
@@ -92,3 +181,56 @@ i{
     box-shadow: 0px 0px 36px 15px rgba(184, 179, 179, 0.28);
 }
 
+.col-6 .col-sm-6{ 
+    width:748px;
+    height:813px;
+    image-resolution: rectangle;
+    font-size: 20px 16px 18px;
+    position:fixed;
+
+}
+.fine{
+    position:fixed;
+
+}
+
+.rating{
+    border:none;
+
+}
+
+.rating {
+    float:left;
+    border:none;
+}
+.rating:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+    clip:rect(0, 0, 0, 0);
+}
+.rating:not(:checked) > label {
+    float:right;
+    width:1em;
+    padding:0 .1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:200%;
+    line-height:1.2;
+    color:#ddd;
+}
+.rating:not(:checked) > label:before {
+    content:'★ ';
+}
+.rating > input:checked ~ label {
+    color: #f70;
+}
+.rating:not(:checked) > label:hover, .rating:not(:checked) > label:hover ~ label {
+    color: gold;
+}
+.rating > input:checked + label:hover, .rating > input:checked + label:hover ~ label, .rating > input:checked ~ label:hover, .rating > input:checked ~ label:hover ~ label, .rating > label:hover ~ input:checked ~ label {
+    color: #ea0;
+}
+.rating > label:active {
+    position:relative;
+}
